# rainbow-csv-tree-sitter

./: .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  demo.tsv  example.csv  grammar.js  package.json  pyproject.toml  readme.md  setup.py
bindings/c/: tree-sitter-csv.h  tree-sitter-csv.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_csv/: __init__.py  binding.c
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: test_with_comma.txt  test_with_pipe.txt  test_with_semicolon.txt
