[package]
name = "tree-sitter-rainbow-csv"
description = "for zed rainbow csv"
version = "0.0.3"
keywords = ["incremental", "parsing", "rainbow csv"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/weartist/rainbow-csv-tree-sitter"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
